[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/spaceRecarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/sinEnergia.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/cargaEnergia.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/UI/HUD/Kenney_Future_.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.1218
height = 193.505

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaRecarga/SpriteZonaRecarga:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 4.19, 16.88, 0.25 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaRecarga/SpriteZonaInterna:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AreaRecarga/SpriteZonaInterna:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.34, 0.34 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "recarga"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaRecarga/SpriteZonaRecarga:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 4.18824, 16.8784, 0.498039 ), Color( 1, 4.19, 16.88, 0.25 ), Color( 1, 4.18824, 16.8784, 0.498039 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 0.5, 0.5 ), Vector2( 1.2, 1.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaColision:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaRecarga/SpriteZonaInterna:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.17, 0.17 ), Vector2( 0.4, 0.4 ) ]
}

[sub_resource type="Animation" id=4]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaRecarga/SpriteZonaRecarga:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaInterna:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0392157, 0.65098, 0.0627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.0352941, 0, 1 )
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=7]
size = 39
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
rotation = 6.28319
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
texture = ExtResource( 2 )
region_rect = Rect2( -43.5483, -12.8283, 246.672, 304.458 )

[node name="AreaRecarga" parent="." instance=ExtResource( 1 )]

[node name="SpriteZonaRecarga" parent="AreaRecarga" index="0"]
modulate = Color( 1, 4.19, 16.88, 0.25 )

[node name="SpriteZonaInterna" parent="AreaRecarga" index="2"]
modulate = Color( 0.0196078, 0.32549, 0.490196, 0.568627 )

[node name="AnimationEstacionRecarga" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/recarga = SubResource( 3 )
anims/sin_energia = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -140.0
margin_top = -232.108
margin_right = 140.0
margin_bottom = -182.108
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]

[editable path="AreaRecarga"]
